# ibmdiagrams

./: .gitignore  pyproject.toml
src/ibmdiagrams/: __init__.py  _dsl.py
src/ibmdiagrams/ibmbase/: __init__.py  build.py  common.py  compose.py  elements.py  opsjson.py  options.py  properties.py  resources.py  utils.py
src/ibmdiagrams/ibmbase/builders/: __init__.py  build.py  types.py
src/ibmdiagrams/ibmbase/composers/: __init__.py  compose.py  composejson.py
src/ibmdiagrams/ibmbase/core/: __init__.py  common.py  options.py  properties.py
src/ibmdiagrams/ibmbase/elements/: __init__.py
src/ibmdiagrams/ibmbase/loaders/: __init__.py  icons.py  load.py  loadjson.py  opsjson.py
src/ibmdiagrams/ibmbase/resources/: __init__.py  compute.py  containers.py  database.py  network.py  observability.py  security.py  storage.py
src/ibmdiagrams/ibmbase/utils/: __init__.py  enums.py  utils.py
src/ibmdiagrams/ibmcloud/: __init__.py
tests/: test_compose_injection.py  test_compose_subprocess.py  test_e2e_python_to_drawio.py  test_elements_path_traversal.py  test_io_error_handling.py  test_options.py  test_resources_vpc_region.py
