[project]
name = "ibmdiagrams"
version = "3.1.10"
description = "Generate architecture diagrams following IBM Diagram Standard"
readme = "README.md"
requires-python = ">=3.11"
license = {file = "LICENSE"}
keywords = ["cloud", "diagrams", "ibm"]
authors = [
  {name = "Jay Warfield", email = "jay.warfield@us.ibm.com"},
]
maintainers = [
  {name = "Jay Warfield", email = "jay.warfield@us.ibm.com"},
]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Developers",
  "Topic :: Software Development :: Libraries :: Python Modules",
  "License :: OSI Approved :: Apache Software License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3 :: Only",
]
dependencies = [
  "pandas>=1.4.2",
  "PyYAML>=6.0",
  "requests>=2.31.0",
  "tabulate>=0.9.0",
  "urllib3>=1.26.9",
]

[project.urls]
Homepage = "https://github.com/IBM/ibmdiagrams"
"Bug Reports" = "https://github.com/IBM/ibmdiagrams/issues"
Source = "https://github.com/IBM/ibmdiagrams"

[project.scripts]
ibmdiagrams = "ibmdiagrams.ibmscripts.ibmdiagrams:main"

[dependency-groups]
dev = [
  "pytest>=7.0",
  "pytest-cov>=4.0",
  "build>=1.0",
  "twine>=4.0",
]

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
